--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.16
   intl_phone_field: ^3.1.0
-  firebase_core: ^2.4.1
+  firebase_core: ^2.21.0
+  cloud_firestore:
   firebase_auth: ^4.2.5
   firebase_database: ^10.0.14
   firebase_storage: ^11.0.10
