--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   smooth_star_rating_nsafe: ^1.0.0+1
   animated_text_kit: ^4.2.2
   url_launcher: ^6.2.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
