--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   url_launcher: ^6.2.1
   provider: ^6.0.5
+  intl:
 
 dev_dependencies:
   flutter_test:
